--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "nedac/sylius-minimum-order-value-plugin",
+    "name": "asdoria/sylius-minimum-order-value-plugin",
     "type": "sylius-plugin",
     "keywords": ["sylius", "sylius-plugin", "minimum", "order", "value"],
     "description": "With this Sylius plugin a minimum order value can be set for each channel.",
     "license": "MIT",
     "require": {
-        "php": "^7.4 || ^8.0",
-        "sylius/sylius": ">=1.10.2 <1.11.0"
+        "php": "^8.0 || ^8.1",
+        "sylius/sylius": ">=1.11 <=1.12"
     },
     "require-dev": {
         "behat/behat": "^3.8",
