--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0 || ^8.1",
-        "sylius/sylius": ">=1.11 <=1.12"
+        "sylius/sylius": "^1.12"
     },
     "require-dev": {
         "behat/behat": "^3.8",
